1)LoanCollectionActivity condition added if Status is Pending , only then navigate to DetailsOfCustomerActivity , else if Status is Complete/In-Process then dont navigate 2) LoanCollectionActivity , on Clicking respective chip, background color wil change to textBlue

--- a/app/src/main/res/layout/activity_loan_collection.xml
+++ b/app/src/main/res/layout/activity_loan_collection.xml
@@ -97,7 +97,7 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@drawable/round_corner_bg"
                     android:backgroundTint="@color/white"
-                    android:hint="@string/search"
+                    android:hint="@string/search_by"
                     android:padding="@dimen/_3sdp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/borderColor"
