ScheduleDetailsActivity Api SUCCESS

--- a/app/src/main/res/layout/activity_schedule_details.xml
+++ b/app/src/main/res/layout/activity_schedule_details.xml
@@ -2,11 +2,11 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.test.schedule_flow.ScheduleDetailsViewModel" />
     </data>
-
 
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -66,288 +66,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder5"
-            tools:listitem="3" />
-
-        <!--Calender 1 -->
-
-        <TextView
-            android:id="@+id/txtDate1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:background="@drawable/round_corner_bg"
-            android:backgroundTint="@color/textBlue"
-            android:padding="@dimen/_4sdp"
-            android:text="30th March\nWednesday"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/viewBorder1"
-            app:layout_constraintStart_toStartOf="parent" />
-
-
-        <TextView
-            android:id="@+id/txtMember1"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:text="Satya Thakur"
-            android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@id/txtDate1"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
-        <TextView
-            android:id="@+id/txtScheduledTime1"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_70sdp"
-            android:text="9:30 pm"
-            android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@id/txtMember1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/txtMember1" />
-
-        <TextView
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_30sdp"
-            android:text="NPA"
-            android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@id/txtMember1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/txtMember1" />
-
-        <View
-            android:id="@+id/viewBorder1"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:layout_marginStart="@dimen/_80sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:background="@color/borderColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/txtMember1"
-            app:layout_constraintTop_toBottomOf="@id/txtMember1" />
-
-
-        <TextView
-            android:id="@+id/txtMember2"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="Rajesh Parab"
-            android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@id/txtDate1"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder1" />
-
-        <TextView
-            android:id="@+id/txtScheduledTime2"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_70sdp"
-            android:text="10:30 am"
-            android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder1" />
-
-        <TextView
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_30sdp"
-            android:text="NPA"
-            android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder1" />
-
-
-        <View
-            android:id="@+id/viewBorder2"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:layout_marginStart="@dimen/_80sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:background="@color/borderColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/txtMember1"
-            app:layout_constraintTop_toBottomOf="@id/txtMember2" />
-
-
-        <TextView
-            android:id="@+id/txtMember3"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="Sairaj Naidu"
-            android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@id/txtDate1"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder2" />
-
-        <TextView
-            android:id="@+id/txtScheduledTime3"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_70sdp"
-            android:text="1:30 pm"
-            android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder2" />
-
-        <TextView
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_30sdp"
-            android:text="NPA"
-            android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder2" />
-
-
-        <View
-            android:id="@+id/viewBorder3"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:layout_marginStart="@dimen/_80sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:background="@color/borderColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/txtMember1"
-            app:layout_constraintTop_toBottomOf="@id/txtMember3" />
-
-
-        <!--Calender 2-->
-
-        <TextView
-            android:id="@+id/txtDate2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:background="@drawable/round_corner_bg"
-            android:backgroundTint="@color/textBlue"
-            android:padding="@dimen/_4sdp"
-            android:text="31st March\n  Thursday"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/viewBorder4"
-            app:layout_constraintStart_toStartOf="parent" />
-
-
-        <TextView
-            android:id="@+id/txtMember4"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:text="Ameya Dixit"
-            android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@id/txtDate2"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder3" />
-
-        <TextView
-            android:id="@+id/txtScheduledTime4"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_70sdp"
-            android:text="9:30 am"
-            android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@id/txtMember4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/txtMember4" />
-
-        <TextView
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_30sdp"
-            android:text="NPA"
-            android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@id/txtMember4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/txtMember4" />
-
-        <View
-            android:id="@+id/viewBorder4"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:layout_marginStart="@dimen/_80sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:background="@color/borderColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/txtMember4"
-            app:layout_constraintTop_toBottomOf="@id/txtMember4" />
-
-
-        <TextView
-            android:id="@+id/txtMember5"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="Sanket Das"
-            android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@id/txtDate2"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder4" />
-
-        <TextView
-            android:id="@+id/txtScheduledTime5"
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_70sdp"
-            android:text="11:30 am"
-            android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder4" />
-
-        <TextView
-            style="@style/common_text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_30sdp"
-            android:text="NPA"
-            android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewBorder4" />
-
-        <View
-            android:id="@+id/viewBorder5"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:layout_marginStart="@dimen/_80sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:background="@color/borderColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/txtMember5"
-            app:layout_constraintTop_toBottomOf="@id/txtMember5" />
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_schedule_details" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
