--- a/app/src/main/res/layout/activity_submit_completion_of_customer.xml
+++ b/app/src/main/res/layout/activity_submit_completion_of_customer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 
     <data>
 
@@ -9,14 +9,15 @@
 
     </data>
 
-
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         style="@style/MainConstraintStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/skyBlue"
-        tools:context=".npa_flow.PaymentInfoOfCustomerActivity">
+        tools:context=".npa_flow.VisitCompletionOfCustomerActivity">
+
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -32,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/payment_information"
+                android:text="@string/call_complete"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13ssp" />
 
@@ -173,18 +174,16 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <!--Second Half-->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clSecondHalf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
-            android:paddingBottom="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/clFirstHalf">
-
 
             <ImageView
                 android:id="@+id/ivNotesIcon"
@@ -211,119 +210,50 @@
 
 
             <Button
-                android:id="@+id/btnWillPayLater"
+                android:id="@+id/btnSubmitNoChange"
                 style="@style/CustomButtonStyle"
-                android:layout_width="@dimen/_136sdp"
-                android:layout_height="@dimen/_45sdp"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:backgroundTint="@color/blueButton"
-                android:text="@string/will_pay_later"
-                android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/btnAlreadyPaid" />
-
-
-            <Button
-                android:id="@+id/btnAlreadyPaid"
-                style="@style/CustomButtonStyle"
-                android:layout_width="@dimen/_136sdp"
+                android:layout_width="@dimen/_250sdp"
                 android:layout_height="@dimen/_45sdp"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
-                android:backgroundTint="@color/blueButton"
-                android:text="@string/already_paid"
+                android:backgroundTint="@color/barnRed"
+                android:text="@string/submit_no_change"
                 android:textStyle="normal"
-                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ivHistory" />
-
-
-            <Button
-                android:id="@+id/btnFoNotVisited"
-                style="@style/CustomButtonStyle"
-                android:layout_width="@dimen/_136sdp"
-                android:layout_height="@dimen/_45sdp"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:backgroundTint="@color/blueButton"
-                android:text="@string/fo_not_visited"
-                android:textStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btnWillPayLater" />
-
-            <Button
-                android:id="@+id/btnNotTakenLoan"
-                style="@style/CustomButtonStyle"
-                android:layout_width="@dimen/_136sdp"
-                android:layout_height="@dimen/_45sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
-                android:backgroundTint="@color/blueButton"
-                android:text="@string/not_taken_loan"
-                android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@+id/btnFoNotVisited"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/btnFoNotVisited" />
+                app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
 
 
             <Button
-                android:id="@+id/btnLoanTakenByRelative"
+                android:id="@+id/btnSubmitNeedToUpdateDetails"
                 style="@style/CustomButtonStyle"
-                android:layout_width="@dimen/_136sdp"
+                android:layout_width="@dimen/_250sdp"
                 android:layout_height="@dimen/_45sdp"
-                android:layout_marginStart="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:backgroundTint="@color/blueButton"
-                android:text="@string/loan_taken_by_relative"
+                android:backgroundTint="@color/green"
+                android:text="@string/submit_need_to_update_details"
                 android:textStyle="normal"
-                android:visibility="visible"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btnFoNotVisited" />
-
-            <EditText
-                android:id="@+id/edtPleaseSpecifyName"
-                android:layout_width="@dimen/_140sdp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:backgroundTint="@color/grey"
-                android:hint="@string/please_specify_name"
-                android:inputType="text"
-                android:maxLength="20"
-                android:textSize="@dimen/_13ssp"
-                android:visibility="gone"
-                app:layout_constraintStart_toStartOf="@id/btnFoNotVisited"
-                app:layout_constraintTop_toBottomOf="@id/btnFoNotVisited" />
-
-            <EditText
-                android:id="@+id/edtPleaseSpecifyContact"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:backgroundTint="@color/grey"
-                android:hint="@string/contact"
-                android:inputType="number"
-                android:maxLength="10"
-                android:textSize="@dimen/_13ssp"
-                android:visibility="gone"
-                app:layout_constraintStart_toStartOf="@id/btnFoNotVisited"
-                app:layout_constraintTop_toBottomOf="@id/edtPleaseSpecifyName" />
+                app:layout_constraintTop_toBottomOf="@id/btnSubmitNoChange" />
 
 
             <Button
-                android:id="@+id/btnOthers"
+                android:id="@+id/btnSubmitEscalateToBM"
                 style="@style/CustomButtonStyle"
-                android:layout_width="@dimen/_136sdp"
+                android:layout_width="@dimen/_250sdp"
                 android:layout_height="@dimen/_45sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
-                android:backgroundTint="@color/blueButton"
-                android:text="@string/others"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:backgroundTint="@color/brightOrange"
+                android:text="@string/submit_escalate_to_bm"
                 android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@+id/btnLoanTakenByRelative"
+                android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/btnLoanTakenByRelative" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnSubmitNeedToUpdateDetails" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
