--- a/app/src/main/res/layout/activity_schedule_details.xml
+++ b/app/src/main/res/layout/activity_schedule_details.xml
@@ -62,18 +62,19 @@
 
         <!--Whenever there is only recyclerview to display
         always set its fix height OR give paddingBottom to display All Items-->
+        <!--Else Give Height = 0dp and Proper constraints-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvScheduleDetails"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_5sdp"
-            android:paddingBottom="@dimen/_40sdp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:itemCount="3"
             tools:listitem="@layout/item_schedule_details" />
 
